Configure production deployment: Workload Identity Federation, database setup scripts, and production documentation
- Update CI/CD workflow to use Workload Identity Federation (no service account keys needed)
- Add helper scripts for Cloud SQL database setup and verification
- Add production setup documentation (threadbox_production_setup.md)
- Add database setup instructions for IPv6 environments
- All GitHub secrets configured and ready for deployment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,7 +86,8 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: projects/488284799646/locations/global/workloadIdentityPools/github-actions-pool/providers/github-provider
+          service_account: github-actions@threadbox-production.iam.gserviceaccount.com
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -120,7 +121,8 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: projects/488284799646/locations/global/workloadIdentityPools/github-actions-pool/providers/github-provider
+          service_account: github-actions@threadbox-production.iam.gserviceaccount.com
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -152,7 +154,8 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: projects/488284799646/locations/global/workloadIdentityPools/github-actions-pool/providers/github-provider
+          service_account: github-actions@threadbox-production.iam.gserviceaccount.com
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
