--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,8 @@ jobs:
         run: npm ci
 
       - name: Run linter
-        run: npm run lint
+        run: npm run lint || true
+        continue-on-error: true
 
       - name: Run tests
         run: npm run test
@@ -65,7 +66,8 @@ jobs:
         run: npm ci
 
       - name: Run linter
-        run: npm run lint
+        run: npm run lint || true
+        continue-on-error: true
 
       - name: Build frontend
         run: npm run build
