--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -3,14 +3,14 @@ FROM node:20-alpine AS base
 # Install dependencies only when needed
 FROM base AS deps
 WORKDIR /app
-COPY backend/package.json backend/package-lock.json ./
+COPY package.json package-lock.json ./
 RUN npm ci
 
 # Build the application
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY backend .
+COPY . .
 RUN npm run build
 
 # Production image
