Fix Dockerfile paths and ENV format for both backend and frontend
- Remove frontend/ prefix from COPY commands (build context is ./frontend)
- Fix ENV format to use key=value syntax (modern Docker format)
- Fixes Docker build errors in CI/CD pipeline

--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -3,21 +3,21 @@ FROM node:20-alpine AS base
 # Install dependencies only when needed
 FROM base AS deps
 WORKDIR /app
-COPY frontend/package.json frontend/package-lock.json ./
+COPY package.json package-lock.json ./
 RUN npm ci
 
 # Build the application
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-COPY frontend .
+COPY . .
 RUN npm run build
 
 # Production image
 FROM base AS runner
 WORKDIR /app
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -33,8 +33,8 @@ USER nextjs
 
 EXPOSE 3000
 
-ENV PORT 3000
-ENV HOSTNAME "0.0.0.0"
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
 
 # Use the standalone server
 CMD ["node", "server.js"]
