Increase database connection timeout and add startup CPU boost
- Increase connection timeout to 90 seconds for Cloud SQL
- Add startup-cpu-boost to Cloud Run deployment for faster startup
- Add keepAlive settings for better connection stability
- Improve error handling in main.ts

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -154,7 +154,9 @@ jobs:
             --cpu 1 \
             --timeout 300 \
             --max-instances 10 \
-            --min-instances 0
+            --min-instances 0 \
+            --startup-cpu-boost \
+            --cpu-throttling
 
   deploy-frontend:
     name: Deploy Frontend to Cloud Run
