Fix all linting warnings and Cloud Run deployment flag
- Fix --startup-cpu-boost to --cpu-boost (correct flag name)
- Remove unused error variable in app.controller.ts
- Fix unsafe assignments in email-accounts.service.ts and memberships.service.ts
- Fix unsafe spread in gmail.provider.ts with type guard
- Fix Promise in setTimeout with void operator
- Add eslint-disable comment for jwt.config.ts
- Fix unsafe member access in main.ts

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -155,8 +155,7 @@ jobs:
             --timeout 300 \
             --max-instances 10 \
             --min-instances 0 \
-            --startup-cpu-boost \
-            --cpu-throttling
+            --cpu-boost
 
   deploy-frontend:
     name: Deploy Frontend to Cloud Run
